# clustering_algorithms

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: analysis.ipynb  data.ipynb
outputs/tables/: best_algorithms.json  dbscan_best_params_per_dataset.csv  genie_best_g_per_dataset.csv  genie_g_summary.csv  metrics.json  metrics_dropped_noise.json  q1_summary_stats.csv  q2_metric_correlations.csv  q3_internal_reliability.csv  q4_best_metric_per_dataset.csv  q4_dataset_metric_fit.csv
presentation/: presentation.tex
presentation/build_latex/: presentation.nav
scripts/: run_all_experiments.py
src/clustering_algorithms/: __init__.py  clustering_model.py  data_loader.py  run_all.py
