[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clustering_algorithms"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "clustering-benchmarks",
    "genieclust>=1.1.6",
    "scikit-learn>=1.5.0",
    "tqdm>=4.67.1",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PIE",
    "PTH",
    "RUF",
    "S",
]
ignore = [
    "S101",
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
